--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>别踩春春</title>
+    <title>别踩鹅鹅</title>
     <meta itemprop="name" content="别踩鹅鹅" />
     <meta itemprop="description" content="某一九少年制作" />
     <meta itemprop="image" content="https://www.thac.cc/kano/res/logo.jpg" />
@@ -46,6 +46,7 @@
                 <br />
                 <div id="btn_group" style="display: block;">
                     <button type="button" id="ready-btn" class="btn btn-primary loading btn-lg">点击开始</button>
+                    <button type="button" class="btn btn-secondary btn-lg" onclick="window.location.href='https://limoest.github.io/chunchun/'">姊妹篇之别踩春春</button>
                 </div>
                 <div id="setting" style="display: none;">
                     <div class="input-group mb-3">
